# workflowsawaiting

./: .editorconfig  .flake8  .markdownlint.yml  .yamllint.yml  LICENSE.txt  README.md  pyproject.toml  workflowsawaiting.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check-general-formatting.yml  check-license.yml  check-markdown.yml  check-prettier-formatting.yml  check-python.yml  check-toc.yml  check-workflows.yml  check-yaml.yml  spell-check.yml
