# See: https://black.readthedocs.io/en/stable/pyproject_toml.html
[tool.black]
line-length = 120

# See: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "workflowsawaiting"
version = "0.0.0"
description = "Check for GitHub Actions workflow runs which are awaiting approval."
authors = ["per1234"]

[tool.poetry.dependencies]
python = "^3.9"
ghapi = "^0.1.19"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^22.12"
codespell = "^2.2.2"
flake8 = "^6.0.0"
pep8-naming = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
